--- a/.classpath
+++ b/.classpath
@@ -6,5 +6,6 @@
 	<classpathentry kind="lib" path="lib/hamcrest-all-1.3.0RC2.jar"/>
 	<classpathentry kind="lib" path="lib/junit-4.8.2.jar"/>
 	<classpathentry kind="lib" path="lib/mockito-all-1.8.5.jar"/>
+	<classpathentry kind="lib" path="lib/commons-lang3-3.0-beta.jar" sourcepath="/home/stephan/Development/API/commons-lang-3.0/commons-lang3-3.0-beta-src/src/main/java"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
